[project]
name = "code-review"
version = "0.1.0"
description = "GitHub PR Code Review System with Multi-CLI AI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.0",
]
